--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 section {
-    margin: 1rem 0;
+    margin: 2.5rem 0;
 }
 
 /* ############################ */
@@ -24,10 +24,15 @@ header {
     border: 1px solid blue;
 }
 
+/* ############################ */
+/* ### NAV ### */
+
 .container nav {
     border: 1px solid black;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    font-size: 1.3rem;
+    padding: 1.5rem;
 }
 
 .container nav a {
@@ -97,6 +102,23 @@ header {
 
 /* ############################ */
 /* ### SECTION SELECT ### */
+
+#select {
+    background-color: white;
+    padding: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: self-end;
+}
+
+#select h1 {
+    width: 100%;
+}
+
+.escarpin {
+    text-align: center;
+}
 
 
 /* ############################ */
